--- a/config.yaml
+++ b/config.yaml
@@ -10,3 +10,5 @@ environments:
     planning_depth: 10
     mcts_number_of_iterations: 10000
     discount_factor: 0.95
+    n_trials: 20
+    endowment: 1.0
