Add experiment data export Add IPOMCP config flags

--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,8 @@
 general:
   fee_discount: 0.95
   results_folder: "data/agent_subject/"
+  report_ipocmp_statistics: False
+  output_planning_tree: False
 
 environments:
   basic_task:
