--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ general:
 environments:
   basic_task:
     name: basic_task
+    include_subject_threshold: False
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
     planning_depth: 6
