--- a/config.yaml
+++ b/config.yaml
@@ -6,8 +6,6 @@ general:
 
 environments:
   basic_task:
-    name: basic_task
-    include_subject_threshold: False
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
     planning_depth: 6
@@ -15,3 +13,5 @@ environments:
     discount_factor: 0.95
     n_trials: 10
     endowment: 1.0
+    name: no_subject_threshold
+    include_subject_threshold: False
