--- a/config.yaml
+++ b/config.yaml
@@ -9,7 +9,8 @@ environments:
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
     planning_depth: 6
-    mcts_number_of_iterations: 6000
+#    mcts_number_of_iterations: 6000
+    mcts_number_of_iterations: 1000
     discount_factor: 0.95
     n_trials: 10
     endowment: 1.0
