--- a/config.yaml
+++ b/config.yaml
@@ -4,8 +4,8 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: True
   include_random: True
-  skip_random: False
-  skip_rational: True
+  skip_random: True
+  skip_rational: False
 
 environments:
   first_task:
