--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: True
   include_random: True
-  skip_random: False
+  skip_random: True
   skip_rational: False
   single_rational: True
 
