--- a/config.yaml
+++ b/config.yaml
@@ -7,6 +7,7 @@ general:
   skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
+  thresholds: [0.0,0.1,0.5]
 
 environments:
   first_task:
