--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: True
   include_random: True
-  skip_random: False
+  skip_random: True
   skip_rational: False
   number_of_rational_agents: 2
   thresholds: [0.0,0.1,0.5]
@@ -25,7 +25,7 @@ environments:
     planning_depth: 10
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
-    mcts_number_of_iterations: 6000
+    mcts_number_of_iterations: 60
     discount_factor: 0.95
     endowment: 1.0
     subintentional_type: softmax
