--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: True
   include_random: True
-  skip_random: False
+  skip_random: True
   skip_rational: False
   number_of_rational_agents: 2
   thresholds: [0.0,0.2,0.8]
@@ -21,12 +21,13 @@ environments:
     subintentional_type: softmax
     subintentional_weight: -0.95
   x_ipomdp:
-    n_trials: 20
+    n_trials: 10
     planning_depth: 10
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
     mcts_number_of_iterations: 60
     discount_factor: 0.95
     endowment: 1.0
+    break_down_policy: True
     subintentional_type: softmax
     subintentional_weight: -0.95
