--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,7 @@ environments:
     mcts_number_of_iterations: 6000
     discount_factor: 0.99
     endowment: 1.0
+    break_down_policy: False
     subintentional_type: softmax
     subintentional_weight: -0.95
   x_ipomdp:
@@ -25,7 +26,7 @@ environments:
     planning_depth: 10
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
-    mcts_number_of_iterations: 60
+    mcts_number_of_iterations: 6000
     discount_factor: 0.95
     endowment: 1.0
     break_down_policy: True
