Move XIPOMDP mechanism to different method

--- a/config.yaml
+++ b/config.yaml
@@ -19,6 +19,7 @@ environments:
     discount_factor: 0.99
     endowment: 1.0
     break_down_policy: False
+    active_detection_mechanism: False
     subintentional_type: softmax
     subintentional_weight: -0.95
   x_ipomdp:
@@ -30,5 +31,6 @@ environments:
     discount_factor: 0.99
     endowment: 1.0
     break_down_policy: True
+    active_detection_mechanism: True
     subintentional_type: softmax
     subintentional_weight: -0.95
