--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: False
   include_random: True
-  skip_random: True
+  skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
   thresholds: [0.0,0.3,0.7]
