--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: False
   include_random: True
-  skip_random: False
+  skip_random: True
   skip_rational: False
   number_of_rational_agents: 2
   thresholds: [0.0,0.3,0.7]
@@ -15,7 +15,7 @@ environments:
     planning_depth: 10
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
-    mcts_number_of_iterations: 10000
+    mcts_number_of_iterations: 15000
     discount_factor: 0.99
     endowment: 1.0
     break_down_policy: False
@@ -27,7 +27,7 @@ environments:
     planning_depth: 10
     uct_exploration_bonus: 5.0
     rollout_rejecting_bonus: 0.5
-    mcts_number_of_iterations: 10000
+    mcts_number_of_iterations: 15000
     discount_factor: 0.99
     endowment: 1.0
     break_down_policy: True
