--- a/config.yaml
+++ b/config.yaml
@@ -7,7 +7,8 @@ general:
   skip_random: True
   skip_rational: False
   number_of_rational_agents: 2
-  thresholds: [0.0,0.3,0.7]
+  sender_thresholds: [0.0,0.3,0.7]
+  receiver_thresholds: [0.0,0.2]
 
 environments:
   first_task:
