--- a/config.yaml
+++ b/config.yaml
@@ -4,10 +4,10 @@ general:
   report_ipocmp_statistics: False
   output_planning_tree: False
   include_random: True
-  skip_random: True
+  skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
-  sender_thresholds: [0.0,0.25,0.75]
+  sender_thresholds: [0.0,0.1,0.7]
   receiver_thresholds: [0.0,0.25]
 
 environments:
