--- a/config.yaml
+++ b/config.yaml
@@ -7,14 +7,9 @@ general:
   skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
-<<<<<<< HEAD
-  sender_thresholds: [0.0,0.1,0.7]
-  receiver_thresholds: [0.0,0.25]
-=======
-  sender_thresholds: [0.0,0.15,0.6]
-  receiver_thresholds: [0.0,0.3]
-  state: debug
->>>>>>> origin/new_belief_structure
+  sender_thresholds: [0.0,0.1,0.85]
+  receiver_thresholds: [0.0,0.15]
+  state: simulation
 
 environments:
   first_task:
