--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 general:
   fee_discount: 0.95
+  offers_step_size: 0.1
   results_folder: "data/"
   report_ipocmp_statistics: False
   output_planning_tree: False
@@ -7,10 +8,9 @@ general:
   skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
-  sender_thresholds: [0.0,0.15,0.6]
-  receiver_thresholds: [0.0,0.3]
+  sender_thresholds: [0.0,0.1,0.6]
+  receiver_thresholds: [0.0,0.25]
   state: debug
-
 
 environments:
   first_task:
