--- a/config.yaml
+++ b/config.yaml
@@ -8,9 +8,10 @@ general:
   skip_random: False
   skip_rational: False
   number_of_rational_agents: 2
-  sender_thresholds: [0.0,0.1,0.6]
-  receiver_thresholds: [0.0,0.25]
+  sender_thresholds: [0.0,0.1,0.5]
+  receiver_thresholds: [0.0,0.35]
   state: debug
+  use_memoization: False
 
 environments:
   first_task:
