Fix nested beliefs update and reset

--- a/config.yaml
+++ b/config.yaml
@@ -10,8 +10,8 @@ general:
   number_of_rational_agents: 2
   sender_thresholds: [0.0,0.1,0.5]
   receiver_thresholds: [0.0,0.35]
-  state: simulation
-  use_memoization: True
+  state: Debug
+  use_memoization: False
 
 environments:
   first_task:
