pull nested belief fux

--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,7 @@ general:
   sender_thresholds: [0.0,0.1,0.5]
   receiver_thresholds: [0.0,0.35]
   state: simulation
-  use_memoization: True
+  use_memoization: False
 
 environments:
   first_task:
