Fix aleph-mechanism likelihood reset

--- a/config.yaml
+++ b/config.yaml
@@ -11,16 +11,16 @@ general:
   sender_thresholds: [0.0,0.1,0.5]
   receiver_thresholds: [0.0]
   aleph_ipomdp_awareness: True
-  strong_typicality_delta: 10.0
+  strong_typicality_delta: 5.0
   expected_reward_omega: 1.5
-  state: debug
+  state: simulation
   use_memoization: False
 
 environments:
   first_task:
     n_trials: 12
     planning_depth: 12
-    uct_exploration_bonus: 6.0
+    uct_exploration_bonus: 7.0
     rollout_rejecting_bonus: 0.5
     mcts_number_of_iterations: 25000
     discount_factor: 0.99
@@ -32,7 +32,7 @@ environments:
   aleph_ipomdp:
     n_trials: 12
     planning_depth: 12
-    uct_exploration_bonus: 5.0
+    uct_exploration_bonus: 7.0
     rollout_rejecting_bonus: 0.5
     mcts_number_of_iterations: 10000
     discount_factor: 0.99
