--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy~=1.19.5
+numpy~=1.24.4
 typing~=3.7.4.3
-sklearn~=0.0
-scikit-learn~=0.24.2
 confuse~=2.0.0
-pandas~=1.2.0
+pandas~=1.4.3
+torch~=1.12.1
+tqdm~=4.65.0
